# weather_kh

./: .coverage  .dockerignore  .env.local  .gitignore  Dockerfile  LICENSE  Makefile  README.MD  pyproject.toml  start.sh
config/: gunicorn.py  settings.py  urls.py
config/gunicorn/: prod.py
core/: settings.py
core/static/core/: style.css
core/templates/core/: _navbar.html  base.html
weather/: urls.py  views.py
weather/errors/: weather_error.py
weather/services/: weather_api.py
weather/static/weather/: style.css
weather/templates/weather/: base.html  index.html
weather/templates/weather/cards/: day_card.html  today_card.html
weather/templatetags/: weather.py
weather/tests/: test_homepage.py
