[tool.poetry]
name = "weather_kh"
version = "0.1.0"
description = "Show weather forecast for kutna hora"
authors = ["Robert Durica <r.durica@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
